[Refactor] Code Cleaning